--- a/xndlib/example-kernels.cfg
+++ b/xndlib/example-kernels.cfg
@@ -65,7 +65,8 @@ prototypes =
 	void d_example_sum(long   n, double *  x, double *  r);
 	void s_example_sum(long   n, float *  x, float *  r);
 	void i_example_sum(long   n, int *  x, int *  r);
-description = 
+description =
+  Compute the sum of x elements.
 dimension = x(n)
 input_arguments = x
 inplace_arguments = 
