Add new example kernel add_one.

--- a/xndlib/example-kernels.cfg
+++ b/xndlib/example-kernels.cfg
@@ -60,7 +60,7 @@ library_dirs =
 	
 header_code = 
 
-[FUNCTION example_sum]
+[KERNEL example_sum]
 prototypes = 
 	void d_example_sum(long   n, double *  x, double *  r);
 	void s_example_sum(long   n, float *  x, float *  r);
@@ -69,11 +69,18 @@ description =
   Compute the sum of x elements.
 dimension = x(n)
 input_arguments = x
-inplace_arguments = 
 output_arguments = r
 hide_arguments = r, n = len(x)
-pre_loop_code = 
-pre_call_code = 
-post_call_code = 
-post_loop_code = 
 
+
+[KERNEL add_one]
+prototypes = 
+	void d_add_one(double   x, double *  r);
+	void i_add_one(int   x, int *  r);
+	void l_add_one(long   x, long *  r);
+	void s_add_one(float   x, float *  r);
+description = Computer increment by one.
+input_arguments = x
+inplace_arguments = 
+output_arguments = r
+hide_arguments = r
