Add unittests for intent(input) cases. Fixed bugs.

--- a/xndlib/example-kernels.cfg
+++ b/xndlib/example-kernels.cfg
@@ -84,3 +84,38 @@ input_arguments = x
 inplace_arguments = 
 output_arguments = r
 hide_arguments = r
+
+[KERNEL scalar_intent_in]
+prototypes = 
+	int int_intent_in(int   a);
+	double double_intent_in(double   a);
+input_arguments = a
+
+[KERNEL scalar_ptr_intent_in]
+prototypes = 
+	double double_p_intent_in(double *  a);
+	int int_p_intent_in(int *  a);
+input_arguments = a
+
+[KERNEL array_intent_in]
+prototypes = 
+	double doublearr_intent_in(double *  arr, int   n);
+	int intarr_intent_in(int *  arr, int   n);
+dimension = arr(n)
+input_arguments = arr
+hide_arguments = n = len(arr)
+
+
+[KERNEL array_2d_c_intent_in]
+prototypes = 
+	double doublearr_2d_c_intent_in(double *  a, int   m, int   n);
+dimension = a(m, n)
+input_arguments = a
+hide_arguments = m = shape(a, 0), n = shape(a, 1)
+
+[KERNEL array_2d_f_intent_in]
+prototypes = 
+	double doublearr_2d_f_intent_in(double *  a, int   m, int   n);
+dimension = a(m, n)
+input_arguments = a
+hide_arguments = m = shape(a, 0), n = shape(a, 1)
