--- a/xndlib/example-kernels.cfg
+++ b/xndlib/example-kernels.cfg
@@ -61,6 +61,7 @@ library_dirs =
 header_code = 
 
 [KERNEL example_sum]
+skip = True
 prototypes = 
 	void d_example_sum(long   n, double *  x, double *  r);
 	void s_example_sum(long   n, float *  x, float *  r);
@@ -74,6 +75,7 @@ hide_arguments = r, n = len(x)
 
 
 [KERNEL add_one]
+skip = True
 prototypes = 
 	void d_add_one(double   x, double *  r);
 	void i_add_one(int   x, int *  r);
@@ -86,12 +88,14 @@ output_arguments = r
 hide_arguments = r
 
 [KERNEL scalar_intent_in]
+#skip = True
 prototypes = 
 	int int_intent_in(int   a);
 	double double_intent_in(double   a);
 input_arguments = a
 
 [KERNEL scalar_ptr_intent_in]
+#skip = True
 prototypes = 
 	double double_p_intent_in(double *  a);
 	int int_p_intent_in(int *  a);
@@ -101,21 +105,26 @@ input_arguments = a
 prototypes = 
 	double doublearr_intent_in(double *  arr, int   n);
 	int intarr_intent_in(int *  arr, int   n);
+kinds = C, Fortran
 dimension = arr(n)
 input_arguments = arr
 hide_arguments = n = len(arr)
 
 
 [KERNEL array_2d_c_intent_in]
+#skip = True
 prototypes = 
 	double doublearr_2d_c_intent_in(double *  a, int   m, int   n);
+kinds = C, Fortran
 dimension = a(m, n)
 input_arguments = a
 hide_arguments = m = shape(a, 0), n = shape(a, 1)
 
 [KERNEL array_2d_f_intent_in]
+#skip = True
 prototypes = 
 	double doublearr_2d_f_intent_in(double *  a, int   m, int   n);
+kinds = C, Fortran
 dimension = a(m, n)
 input_arguments = a
 hide_arguments = m = shape(a, 0), n = shape(a, 1)
