--- a/xndlib/example-kernels.cfg
+++ b/xndlib/example-kernels.cfg
@@ -103,28 +103,19 @@ input_arguments = a
 
 [KERNEL array_intent_in]
 prototypes = 
-	double doublearr_intent_in(double *  arr, int   n);
-	int intarr_intent_in(int *  arr, int   n);
+	double doublearr_intent_in(double *  arr, int n);
+	int intarr_intent_in(int *  arr, int n);
 kinds = C, Fortran
 dimension = arr(n)
 input_arguments = arr
 hide_arguments = n = len(arr)
 
 
-[KERNEL array_2d_c_intent_in]
-#skip = True
-prototypes = 
+[KERNEL array_2d_intent_in]
+prototypes_C =
 	double doublearr_2d_c_intent_in(double *  a, int   m, int   n);
-kinds = C, Fortran
-dimension = a(m, n)
-input_arguments = a
-hide_arguments = m = shape(a, 0), n = shape(a, 1)
-
-[KERNEL array_2d_f_intent_in]
-#skip = True
-prototypes = 
-	double doublearr_2d_f_intent_in(double *  a, int   m, int   n);
-kinds = C, Fortran
+prototypes_Fortran =
+        double doublearr_2d_f_intent_in(double *  a, int   m, int   n);	
 dimension = a(m, n)
 input_arguments = a
 hide_arguments = m = shape(a, 0), n = shape(a, 1)
