Introduce ellipses,arraytypes in .cfg files, Block for templating, added test of 2d data.

--- a/xndlib/example-kernels.cfg
+++ b/xndlib/example-kernels.cfg
@@ -60,6 +60,8 @@ library_dirs =
 	
 header_code = 
 
+ellipses = ...
+
 [KERNEL example_sum]
 skip = True
 prototypes = 
@@ -89,6 +91,8 @@ hide_arguments = r
 
 [KERNEL scalar_intent_in]
 #skip = True
+ellipses = ..., var...
+description = Add one.
 prototypes = 
 	int int_intent_in(int   a);
 	double double_intent_in(double   a);
@@ -102,20 +106,27 @@ prototypes =
 input_arguments = a
 
 [KERNEL array_intent_in]
+#debug = True
+kinds = C, Fortran, Xnd
+ellipses = ...
+arraytypes = symbolic
 prototypes = 
 	double doublearr_intent_in(double *  arr, int n);
 	int intarr_intent_in(int *  arr, int n);
-kinds = C, Fortran
 dimension = arr(n)
 input_arguments = arr
 hide_arguments = n = len(arr)
 
 
 [KERNEL array_2d_intent_in]
+ellipses = ...
+prototypes =
+	double doublearr_2d_c_intent_in(double *  a, int   m, int   n);
 prototypes_C =
 	double doublearr_2d_c_intent_in(double *  a, int   m, int   n);
 prototypes_Fortran =
-        double doublearr_2d_f_intent_in(double *  a, int   m, int   n);	
+        double doublearr_2d_f_intent_in(double *  a, int   m, int   n);
+kinds = Xnd
 dimension = a(m, n)
 input_arguments = a
 hide_arguments = m = shape(a, 0), n = shape(a, 1)
