support kernels with no input or no output

--- a/xndlib/example-kernels.cfg
+++ b/xndlib/example-kernels.cfg
@@ -89,6 +89,13 @@ inplace_arguments =
 output_arguments = r
 hide_arguments = r
 
+[KERNEL no_input]
+debug = True
+ellipses = none
+prototypes = 
+	int no_input(void);
+description = Return 2018
+
 [KERNEL scalar_intent_in]
 #skip = True
 ellipses = ..., var...
@@ -130,3 +137,15 @@ kinds = Xnd
 dimension = a(m, n)
 input_arguments = a
 hide_arguments = m = shape(a, 0), n = shape(a, 1)
+
+[KERNEL no_output]
+ellipses = none, ...
+prototypes = 
+	void no_output(int *  a);
+description = 
+dimension = 
+input_arguments = a
+inplace_arguments = 
+output_arguments = 
+hide_arguments = 
+
