Add no_input, no_output tests. Report wrapper usage at exit. Check C/F contiguous of input arrays. Add xndtools_fcopy.

--- a/xndlib/example-kernels.cfg
+++ b/xndlib/example-kernels.cfg
@@ -139,13 +139,35 @@ input_arguments = a
 hide_arguments = m = shape(a, 0), n = shape(a, 1)
 
 [KERNEL no_output]
-ellipses = none, ...
+ellipses = none, ..., var...
 prototypes = 
 	void no_output(int *  a);
-description = 
+description = Sets to 2019
 dimension = 
 input_arguments = a
 inplace_arguments = 
 output_arguments = 
-hide_arguments = 
+hide_arguments =
+
+[KERNEL no_output_out]
+ellipses = none
+prototypes = 
+	void no_output(int *  a);
+description = Returns 2019
+dimension = 
+input_arguments = 
+inplace_arguments = 
+output_arguments = a
+hide_arguments = a
+
+[KERNEL no_output_in_out]
+ellipses = none, ..., var...
+prototypes = 
+	void no_output(int *  a);
+description = Resets to and returns 2019
+dimension = 
+input_arguments = a
+inplace_arguments = 
+output_arguments = a
+
 
