Impl constraints support for output arguments.

--- a/xndlib/example-kernels.cfg
+++ b/xndlib/example-kernels.cfg
@@ -170,4 +170,14 @@ input_arguments = a
 inplace_arguments = 
 output_arguments = a
 
+[KERNEL array_intent_out]
+ellipses = none, ...
+prototypes = 
+	void doublearr_intent_out(int   n, double *  a);
+description = 
+dimension = a(n)
+input_arguments = n
+inplace_arguments = 
+output_arguments = a
+hide_arguments = a
 
