--- a/xndlib/example-kernels.cfg
+++ b/xndlib/example-kernels.cfg
@@ -9,9 +9,9 @@
 #  1.2 MODULE section contains header_code that may contain C code that
 #      is inserted after include statements of extension modules source.
 #  
-#  2.1 FUNCTION name must be changed to appropriate one [REQUIRED].
+#  2.1 KERNEL name must be changed to appropriate one [REQUIRED].
 #  
-#  2.2 FUNCTION section contains skip field. When present, the corrsponding
+#  2.2 KERNEL section contains skip field. When present, the corrsponding
 #      section will be ignored. When done editing the section, you can
 #      delete the skip field. [REQUIRED]
 #  
@@ -31,7 +31,7 @@
 #      where <dimension spec> is a comma-separated list of dimensions.
 #      All arguments not specified in dimension field are considered scalars.
 #  
-#  2.6 Section contains input/inplace/output/hide_arguments
+#  2.6 Section contains input/inplace/inout/output/hide_arguments
 #      fields. Please add argument names to the field as appropiate
 #      [OPTIONAL]. Initial fillment is based on the use of const in
 #      prototypes.
@@ -144,8 +144,8 @@ prototypes =
 	void no_output(int *  a);
 description = Sets to 2019
 dimension = 
-input_arguments = a
-inplace_arguments = 
+input_arguments = 
+inplace_arguments = a
 output_arguments = 
 hide_arguments =
 
@@ -166,8 +166,8 @@ prototypes =
 	void no_output(int *  a);
 description = Resets to and returns 2019
 dimension = 
-input_arguments = a
-inplace_arguments = 
+input_arguments = 
+inplace_arguments = a
 output_arguments = a
 
 [KERNEL array_intent_out]
@@ -181,3 +181,13 @@ inplace_arguments =
 output_arguments = a
 hide_arguments = a
 
+[KERNEL array_intent_in_out]
+ellipses = none, ...
+prototypes = 
+	void doublearr_intent_out(int   n, double *  a);
+description = 
+dimension = a(n)
+input_arguments = a
+inplace_arguments = 
+output_arguments = a
+hide_arguments = n = len(a)
