More tests for functions with scalars: optional arguments.

--- a/xndlib/test_scalar-kernels.cfg
+++ b/xndlib/test_scalar-kernels.cfg
@@ -57,6 +57,7 @@ include_dirs =
 sources =
 	examplelib/test_scalar.c
 kinds = Xnd
+
 ellipses = none
 #ellipses = ..., var...
 debug=False
@@ -219,7 +220,6 @@ output_arguments = a
 
 
 
-
 [KERNEL test_scalar_ptr_return_input]
 prototypes = 
 	long test_scalar_ptr_return(long *  a);
@@ -271,4 +271,212 @@ description = takes input, returns value incremented by 10 and increment by 30
 inout_arguments = a
 output_arguments = a
 
+# WITH VALUES
 
+[KERNEL test_scalar_value_input]
+prototypes = 
+	void test_scalar(long   a);
+description = takes input and does nothing
+input_arguments = a = 5
+
+[KERNEL test_scalar_value_inplace]
+prototypes = 
+	void test_scalar(long   a);
+description = takes input and does nothing
+inplace_arguments = a = 5
+
+[KERNEL test_scalar_value_inout]
+prototypes = 
+	void test_scalar(long   a);
+description = takes input and does nothing
+inout_arguments = a = 5
+
+[KERNEL test_scalar_value_input_output]
+prototypes = 
+	void test_scalar(long   a);
+description = takes input and returns
+input_arguments = a = 5
+output_arguments = a
+
+[KERNEL test_scalar_value_inplace_output]
+prototypes = 
+	void test_scalar(long   a);
+description = takes input and returns
+inplace_arguments = a = 5
+output_arguments = a
+
+[KERNEL test_scalar_value_inout_output]
+prototypes = 
+	void test_scalar(long   a);
+description = takes input and returns
+inout_arguments = a = 5
+output_arguments = a
+
+[KERNEL test_scalar_value_output]
+prototypes = 
+	void test_scalar(long   a);
+description = returns something
+output_arguments = a = 5
+
+[KERNEL test_scalar_value_hide]
+prototypes = 
+	void test_scalar(long   a);
+description = do nothing
+hide_arguments = a = 5
+
+
+[KERNEL test_scalar_ptr_value_input]
+prototypes = 
+	void test_scalar_ptr(long *  a);
+description = takes input and does nothing
+input_arguments = a = 5
+
+[KERNEL test_scalar_ptr_value_inplace]
+prototypes = 
+	void test_scalar_ptr(long *  a);
+description = takes input and does nothing
+inplace_arguments = a = 5
+
+[KERNEL test_scalar_ptr_value_inout]
+prototypes = 
+	void test_scalar_ptr(long *  a);
+description = takes input and does nothing
+inout_arguments = a = 5
+
+[KERNEL test_scalar_ptr_value_input_output]
+prototypes = 
+	void test_scalar_ptr(long *  a);
+description = takes input and returns
+input_arguments = a = 5
+output_arguments = a
+
+[KERNEL test_scalar_ptr_value_inplace_output]
+prototypes = 
+	void test_scalar_ptr(long *  a);
+description = takes input and returns
+inplace_arguments = a = 5
+output_arguments = a
+
+[KERNEL test_scalar_ptr_value_inout_output]
+prototypes = 
+	void test_scalar_ptr(long *  a);
+description = takes input and returns
+inout_arguments = a = 5
+output_arguments = a
+
+[KERNEL test_scalar_ptr_value_output]
+prototypes = 
+	void test_scalar_ptr(long *  a);
+description = returns something
+output_arguments = a = 5
+
+[KERNEL test_scalar_ptr_value_hide]
+prototypes = 
+	void test_scalar_ptr(long *  a);
+description = do nothing
+hide_arguments = a = 5
+
+
+
+[KERNEL test_scalar_value_return_input]
+prototypes = 
+	long test_scalar_return(long   a);
+description = takes input, returns increment by 20
+input_arguments = a = 5
+
+[KERNEL test_scalar_value_return_inplace]
+prototypes = 
+	long test_scalar_return(long   a);
+description = takes input, returns increment by 20
+inplace_arguments = a = 5
+
+[KERNEL test_scalar_value_return_inout]
+prototypes = 
+	long test_scalar_return(long   a);
+description = takes input, returns increment by 20
+inout_arguments = a = 5
+
+[KERNEL test_scalar_value_return_output]
+prototypes = 
+	long test_scalar_return(long   a);
+description = returns something increment by 20, two values
+output_arguments = a = 5
+
+[KERNEL test_scalar_value_return_hide]
+prototypes = 
+	long test_scalar_return(long   a);
+description = returns something increment by 20
+hide_arguments = a = 5
+
+[KERNEL test_scalar_value_return_input_output]
+prototypes = 
+	long test_scalar_return(long   a);
+description = takes input, returns value and increment by 20
+input_arguments = a = 5
+output_arguments = a
+
+[KERNEL test_scalar_value_return_inplace_output]
+prototypes = 
+	long test_scalar_return(long   a);
+description = takes input, returns value and increment by 20
+inplace_arguments = a = 5
+output_arguments = a
+
+[KERNEL test_scalar_value_return_inout_output]
+prototypes = 
+	long test_scalar_return(long   a);
+description = takes input, returns value and increment by 20
+inout_arguments = a = 5
+output_arguments = a
+
+
+[KERNEL test_scalar_ptr_value_return_input]
+prototypes = 
+	long test_scalar_ptr_return(long *  a);
+description = takes input, returns increment by 20
+input_arguments = a = 5
+
+[KERNEL test_scalar_ptr_value_return_inplace]
+prototypes = 
+	long test_scalar_ptr_return(long *  a);
+description = takes input, returns increment by 20
+inplace_arguments = a = 5
+
+[KERNEL test_scalar_ptr_value_return_inout]
+prototypes = 
+	long test_scalar_ptr_return(long *  a);
+description = takes input, returns increment by 20
+inout_arguments = a = 5
+
+[KERNEL test_scalar_ptr_value_return_output]
+prototypes = 
+	long test_scalar_ptr_return(long *  a);
+description = returns something increment by 20, two values
+output_arguments = a = 5
+
+[KERNEL test_scalar_ptr_value_return_hide]
+prototypes = 
+	long test_scalar_ptr_return(long *  a);
+description = returns something increment by 20
+hide_arguments = a = 5
+
+[KERNEL test_scalar_ptr_value_return_input_output]
+prototypes = 
+	long test_scalar_ptr_return(long *  a);
+description = takes input, returns value and increment by 20
+input_arguments = a = 5
+output_arguments = a
+
+[KERNEL test_scalar_ptr_value_return_inplace_output]
+prototypes = 
+	long test_scalar_ptr_return(long *  a);
+description = takes input, returns value and increment by 20
+inplace_arguments = a = 5
+output_arguments = a
+
+[KERNEL test_scalar_ptr_value_return_inout_output]
+prototypes = 
+	long test_scalar_ptr_return(long *  a);
+description = takes input, returns value and increment by 20
+inout_arguments = a = 5
+output_arguments = a
