code cleanup, added ellipses tests for scalar tests

--- a/xndlib/test_scalar-kernels.cfg
+++ b/xndlib/test_scalar-kernels.cfg
@@ -1,51 +1,12 @@
 #
+#  Unittests for scalars.
+#
+#  Created: June 2018
+#  Author: Pearu Peterson
+#
 # The initial version of this file is generated using command:
 #
 #  xnd_tools config -m test_scalar examplelib/test_scalar.c
-#
-#  Editing instructions
-#  --------------------
-#  
-#  1.1 MODULE section contains typemaps. Check that C type is correctly
-#      mapped [OPTIONAL]. Other fields can also modified.
-#  
-#  1.2 MODULE section contains header_code that may contain C code that
-#      is inserted after include statements of extension modules source.
-#  
-#  2.1 KERNEL name must be changed to appropriate one [REQUIRED].
-#  
-#  2.2 KERNEL section contains skip field. When present, the corrsponding
-#      section will be ignored. When done editing the section, you can
-#      delete the skip field. [REQUIRED]
-#  
-#  2.3 Prototypes field contains C function prototypes as retrieved from
-#      the header files. There should be no need to edit prototypes.
-#      Note that within a section all prototypes must have the same
-#      arguments, only their type specification may differ.
-#  
-#  2.4 Section contains description field that will be used as doc string
-#      of the kernel. Please fill it in [OPTIONAL].
-#  
-#  2.5 Dimension field field is used to specify dimensions of array
-#      arguments. Please fill it in as follows [REQUIRED]:
-#  
-#        <argument name>(<dimension spec>)
-#  
-#      where <dimension spec> is a comma-separated list of dimensions.
-#      All arguments not specified in dimension field are considered scalars.
-#  
-#  2.6 Section contains input/inplace/output/hide_arguments
-#      fields. Please add argument names to the field as appropiate
-#      [OPTIONAL]. Initial fillment is based on the use of const in
-#      prototypes.
-#  
-#  2.7 Section contains pre/post_call_code that may contain C code that
-#      is inserted before/after the call to the backend function
-#      [OPTIONAL]. This is useful in special circumstances.
-#  
-#
-
-
 
 [MODULE test_scalar]
 typemaps = 
@@ -58,9 +19,11 @@ sources =
 	examplelib/test_scalar.c
 kinds = Xnd
 
-ellipses = none
+ellipses = none, ...
+#, ... 
+#, ...
 #ellipses = ..., var...
-debug=False
+#debug=False
 
 [KERNEL test_scalar_input]
 prototypes = 
