Cont impl array arguments.

--- a/xndlib/test_array-kernels.cfg
+++ b/xndlib/test_array-kernels.cfg
@@ -21,33 +21,37 @@ ellipses = none
 #, ... 
 #, ...
 #ellipses = ..., var...
-#debug=False
+#debug=True
 
 [KERNEL test_array_range_input]
+kinds = C, Xnd
 prototypes = 
-	void test_array_range(long n, long* a);
+	long test_array_range(long n, long* a);
 description = takes input that copy is changed to range(n)
 input_arguments = a(n)
 hide_arguments = n = len(a)
 
 [KERNEL test_array_range_inplace]
+kinds = C, Xnd
 prototypes = 
-	void test_array_range(long n, long* a);
+	long test_array_range(long n, long* a);
 description = takes input that is changed to range(n)
 inplace_arguments = a(n)
 hide_arguments = n = len(a)
 
 [KERNEL test_array_range_input_output]
+kinds = C, Xnd
 prototypes = 
-	void test_array_range(long n, long* a);
+	long test_array_range(long n, long* a);
 description = takes input that copy is changed to range(n)
 input_arguments = a(n)
 hide_arguments = n = len(a)
 output_arguments = a
 
 [KERNEL test_array_range_output]
+kinds = C, Fortran, Xnd
 prototypes = 
-	void test_array_range(long n, long* a);
+	long test_array_range(long n, long* a);
 description = returns range(n)
 input_arguments = n
 output_arguments = a(n)
