kernel generator: impl array support, wip

--- a/xndlib/test_array-kernels.cfg
+++ b/xndlib/test_array-kernels.cfg
@@ -31,6 +31,18 @@ description = takes input that copy is changed to range(n)
 input_arguments = a(n)
 hide_arguments = n = len(a)
 
+[KERNEL test_array_ranges_input]
+kinds = Xnd
+prototypes_Fortran = 
+	long test_array_ranges(long n, long* a);
+prototypes = 
+	long test_array_ranges(long n, long* a);
+description = takes input that copy is changed to <row index>*10+range(n)
+input_arguments = a(n,n)
+hide_arguments = n = len(a)
+fortran_arguments_Fortran = a
+
+
 [KERNEL test_array_range_inplace]
 kinds = C, Xnd
 prototypes = 
