Impl support for all intents of array arguments.

--- a/xndlib/test_array-kernels.cfg
+++ b/xndlib/test_array-kernels.cfg
@@ -47,9 +47,18 @@ fortran_arguments_Fortran = a
 kinds = C, Xnd
 prototypes = 
 	long test_array_range(long n, long* a);
-description = takes input that is changed to range(n)
+description = takes input that is changed to range(n) inplace
 inplace_arguments = a(n)
 hide_arguments = n = len(a)
+
+[KERNEL test_array_range_inout]
+kinds = C, Xnd
+prototypes = 
+	long test_array_range(long n, long* a);
+description = takes contiguous input that is changed to range(n) inplace
+inout_arguments = a(n)
+hide_arguments = n = len(a)
+
 
 [KERNEL test_array_range_input_output]
 kinds = C, Xnd
@@ -60,6 +69,24 @@ input_arguments = a(n)
 hide_arguments = n = len(a)
 output_arguments = a
 
+[KERNEL test_array_range_inplace_output]
+kinds = C, Xnd
+prototypes = 
+	long test_array_range(long n, long* a);
+description = takes input that copy is changed to range(n) and a copy is returned
+inplace_arguments = a(n)
+hide_arguments = n = len(a)
+output_arguments = a
+
+[KERNEL test_array_range_inout_output]
+kinds = C, Xnd
+prototypes = 
+	long test_array_range(long n, long* a);
+description = takes input that is changed to range(n) and a copy is returned
+inout_arguments = a(n)
+hide_arguments = n = len(a)
+output_arguments = a
+
 [KERNEL test_array_range_output]
 kinds = C, Fortran, Xnd
 prototypes = 
@@ -67,3 +94,11 @@ prototypes =
 description = returns range(n)
 input_arguments = n
 output_arguments = a(n)
+
+[KERNEL test_array_range_hide]
+kinds = C
+prototypes = 
+	long test_array_range(long n, long* a);
+description = takes n as input, internally range(n) is computed in memory
+input_arguments = n
+hide_arguments = a(n)
