Enable -std=c11 for xndlib (required by ndtypes).

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
   - source activate test-environment
   - export PREFIX=$CONDA_PREFIX
-  - pwd
+  - gcc --version
   - bash update_xnd.sh
 
 before_script:
