--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,11 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest mkl
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest mkl mkl-include mkl-rt
   - source activate test-environment
   - export PREFIX=$CONDA_PREFIX
   - gcc --version
+  - python --version
   - bash update_xnd.sh
 
 before_script:
@@ -26,6 +27,6 @@ before_script:
 
 script:
   - pytest xndtools/
-  - cd xndlib/ && pytest xndlib --ignore xndlib/tests/test_example.py
+  - cd xndlib/ && pytest xndlib/ --ignore xndlib/tests/test_example.py
 
 
