--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest mkl mkl-include mkl-rt
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest mkl mkl-include mkl-rt numpy
   - source activate test-environment
   - export PREFIX=$CONDA_PREFIX
   - gcc --version
