--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,13 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest mkl mkl-include mkl-rt numpy
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip pytest mkl mkl-include mkl-rt numpy
   - source activate test-environment
   - export PREFIX=$CONDA_PREFIX
   - gcc --version
   - python --version
+  - pip --version
+  - pytest --version
   - bash update_xnd.sh
 
 before_script:
@@ -26,7 +28,7 @@ before_script:
   - cd xndlib && python setup.py develop && cd -
 
 script:
-  - pytest xndtools/
-  - cd xndlib/ && pytest xndlib/ --ignore xndlib/tests/test_example.py
+  - pytest -v xndtools/
+  - cd xndlib/ && pytest -v xndlib/ --ignore xndlib/tests/test_example.py
 
 
